@@ -23,7 +23,7 @@ from docutils.parsers.rst import directives, roles
 import docutils.utils
 import docutils.frontend
 
-_settings = docutils.frontend.OptionParser().get_default_values()
+_settings = docutils.frontend.get_default_settings()
 _reporter = docutils.utils.new_reporter('', _settings)
 
 reference_language = 'en'
